derivations/sfb.tex: r \neq r'

--- a/derivations/sfb.tex
+++ b/derivations/sfb.tex
@@ -427,10 +427,10 @@ and the index `A' on $C^A_{\ell nn'}$ indicates the local average effect, see
 (-1)^m
 \sum_{L_2 M_2}
 \mathcal{G}^{\ell L L_2}_{-m,M,M_2}
-\int\dd r\,r^2
-\,g_{n'\ell}(r)
-\,g_{N'L}(r)
-\,W^{Y,*}_{L_2M_2}(r)
+\int\dd r'\,r'^2
+\,g_{n'\ell}(r')
+\,g_{N'L}(r')
+\,W^{Y,*}_{L_2M_2}(r')
 \\
 &=
 \sum_{L_1 M_1}
@@ -440,7 +440,7 @@ and the index `A' on $C^A_{\ell nn'}$ indicates the local average effect, see
 \mathcal{G}^{\ell L L_2}_{-m,M,M_2}
 \vs&\quad\times
 \int\dd r\,r^2 \,g_{n\ell}(r) \,g_{NL}(r) \,W^X_{L_1M_1}(r)
-\int\dd r\,r^2 \,g_{n'\ell}(r) \,g_{N'L}(r) \,W^{Y,*}_{L_2M_2}(r)
+\int\dd r'\,r'^2 \,g_{n'\ell}(r') \,g_{N'L}(r') \,W^{Y,*}_{L_2M_2}(r')
 \,.
 \ea
 \end{widetext}
@@ -458,7 +458,7 @@ Using the orthogonality of the Gaunt factor \cref{eq:gaunt_orthogonality},
 \vs&\quad\times
 \int\dd r\,r^2 \,g_{n\ell}(r) \,g_{NL}(r) \,W^X_{L_1M_1}(r)
 \vs&\quad\times
-\int\dd r\,r^2 \,g_{n'\ell}(r) \,g_{N'L}(r) \,W^{Y,*}_{L_1M_1}(r)
+\int\dd r'\,r'^2 \,g_{n'\ell}(r') \,g_{N'L}(r') \,W^{Y,*}_{L_1M_1}(r')
 \label{eq:cell_mixing_matrix_explicit}
 \,.
 \ea
