calc_cmix: change order of summation to speed up

--- a/derivations/sfb.tex
+++ b/derivations/sfb.tex
@@ -598,6 +598,21 @@ Next, we discretize to get
 G_{n\ell}(r_i)\,G_{NL}(r_i) \,W^X_{L_1M_1}(r_i)
 \sum_j
 G_{n'\ell}(r_j)\,G_{N'L}(r_j) \,W^{Y,*}_{L_1M_1}(r_j)
+\\
+&=
+\frac{2L+1}{4\pi}
+\sum_{L_1}
+\begin{pmatrix}
+  \ell & L & L_1 \\
+  0 & 0 & 0
+\end{pmatrix}^2
+\sum_i
+G_{n\ell}(r_i)\,G_{NL}(r_i)
+\sum_j
+G_{n'\ell}(r_j)\,G_{N'L}(r_j)
+\sum_{M_1}
+W^X_{L_1M_1}(r_i)
+\,W^{Y,*}_{L_1M_1}(r_j)
 \,,
 \ea
 where we defined
